load("@rules_shell//shell:sh_library.bzl", "sh_library")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

package(default_visibility = ["//visibility:public"])

sh_library(
    name = "log",
    srcs = [
        "log.bash",
    ],
)

sh_test(
    name = "test",
    srcs = [
        "test.bash",
    ],
    deps = [
        "@fshlib//:log",
        "@bazel_tools//tools/bash/runfiles",
    ],
    size = "small",
)
